Added most functionality and ui

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,17 @@
   "id": "00000000",
   "api": "1.0.0",
   "main": "dist/code.js",
+  "capabilities": [],
+  "enableProposedApi": false,
+  "documentAccess": "dynamic-page",
+  "editorType": [
+    "figma"
+  ],
   "ui": "dist/ui.html",
-  "editorType": ["figma", "figjam"]
+  "permissions": ["teamlibrary"],
+  "networkAccess": {
+    "allowedDomains": ["*"],
+    "reasoning": "testing",
+    "devAllowedDomains": []
+  }
 }
