--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@types/base-64": "^1.0.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
+    "css-loader": "^6.11.0",
+    "html-webpack-plugin": "^5.6.0",
     "husky": "^8.0.1",
+    "json-to-scss": "^1.6.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-dev-utils": "^12.0.1",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
+    "sass": "^1.77.8",
+    "sass-loader": "^15.0.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
@@ -38,7 +41,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,css,json}": [
+    "src/**/*.{js,jsx,ts,tsx,css, json}": [
       "prettier --write",
       "git add"
     ]
