--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@create-figma-plugin/utilities": "^3.2.0",
     "@figma-plugin/helpers": "^0.15.2",
+    "eslint": "^9.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.97.0",
     "@types/base-64": "^1.0.2",
+    "@types/html-minifier-terser": "^7.0.2",
+    "@types/json-schema": "^7.0.15",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/scheduler": "^0.23.0",
     "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^8.0.1",
@@ -32,8 +38,8 @@
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "husky": {
     "hooks": {
